--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,5 @@
 body {
 	min-height: 100vh;
 	padding: 20px 10px;
+	overflow-x: hidden;
 }
